@@ -8,5 +8,7 @@ val g : unit -> int = <fun>
 Exception: Not_found.
 Raised at f in file "//toplevel//", line 2, characters 11-26
 Called from g in file "//toplevel//", line 1, characters 11-15
-Called from Toploop.load_lambda in file "toplevel/toploop.ml", line 212, characters 17-27
+Called from Stdlib__fun.protect in file "fun.ml", line 33, characters 8-15
+Re-raised at Stdlib__fun.protect in file "fun.ml", line 38, characters 6-52
+Called from Toploop.load_lambda in file "toplevel/toploop.ml", line 212, characters 4-150
 
